--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -1,9 +1,8 @@
-﻿@model IEnumerable<MyWebsite.Models.BudgetProject.BudgetItems>
+﻿@model IEnumerable<MyWebsite.Models.BudgetApp.BudgetItems>
 
 @{  
     var user = User.Identity.Name;
     var budgetMonth = DateTime.Now.Month;
-    var TypeOfBudget = "";
 }
 <div class="partialLoginText"><p>@Html.Partial("_LoginPartial", 1)</p></div>
 <h3 class="painlessBudgetTitle">The Painless Budget</h3>
@@ -43,12 +42,9 @@
             <div class="input-field" style="margin-bottom: 10px;">
                 <i class="material-icons prefix" style="margin-top:30px; color:#54b798">attach_money</i>
                 <input name="Cost" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
-                @Html.Hidden("Email", user)
                 @Html.Hidden("Description", "Description")
                 @Html.Hidden("Cost", "Cost")
                 @Html.Hidden("TypeOfBudget", "TypeOfBudget")
-                @Html.Hidden("Date", DateTime.Now)
-                @Html.Hidden("Month", budgetMonth)
                 <div style="margin-top:23px;"><h5><b>4. Save</b></h5> <button type="submit" class="btn-floating btn-large waves-effect waves-light blue-grey lighten-4"><i id="saveBtn" class="far fa-save" style="font-weight:bold; color: #212121 !important;"></i></button></div>
             </div>
         </form>
@@ -69,7 +65,7 @@
             </tr>
             @{ int count = 0;}
             @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 1).OrderBy(x => x.Date))
-            {               
+            {
                 count += 1;
                 <tr style="border-bottom: 1px dotted #cfd8dc">
                     <td>@item.Date.ToString("MM/dd/yyyy")</td>
@@ -78,7 +74,6 @@
                     <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId, returnTo = "AddTransaction" })'><i class="material-icons left trashcan-icon">delete</i></a></td>
                 </tr>            
             }
-
             @if (count == 0)
             {
                 <tr>
