--- a/MyWebsite/wwwroot/css/site.css
+++ b/MyWebsite/wwwroot/css/site.css
@@ -345,6 +345,14 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     background-color: #54b798 !important;
 }
 
+.purple-trashcan {
+    color: #cfd8dc !important;
+}
+
+.purple-trashcan:hover {
+    color: #525e78 !important;
+}
+
 .squareSaveBtn {
     font-weight: bold;
     color: #54b798 !important;
@@ -371,4 +379,11 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
     font-weight: bold;
     color: #54b798;
     margin-top: 10px;
+}
+
+.budgetCatBtns {
+    /*background-color: #54b798;*/
+    font-weight: bold;
+    font-size: 13px !important;
+    margin-top: 5px !important;
 }
