--- a/MyWebsite/Views/Budgets/BudgetInsights.cshtml
+++ b/MyWebsite/Views/Budgets/BudgetInsights.cshtml
@@ -79,9 +79,9 @@
                         <span>
                             <i style="margin-right: 10px;" class="fas fa-balance-scale"></i>Compare Last Two Months
                         </span>
-                        <span style="float:right">
-                            Jan: $1200
-                            Feb: $1149
+                        <span style="float: right">
+                            <text>@DateTime.Now.ToString("MMMM") : @String.Format("{0:C}", ViewBag.FirstMonth)</text>
+                            <text>@DateTime.Now.AddMonths(-1).ToString("MMMM") : @String.Format("{0:C}", ViewBag.SecondMonth)</text>
                         </span>
                     </div>
                 </div>
@@ -90,10 +90,10 @@
                 <div class="col s12 m5 offset-m4">
                     <div class="card-panel z-depth-5 teal">
                         <span class="white-text">
-                            <i style="margin-right: 10px;" class="fas fa-piggy-bank"></i>Category with Most Savings
+                            <i style="margin-right: 10px;" class="fas fa-piggy-bank"></i>Category with Highest Savings
                         </span>
                         <span style="float:right">
-                            Bills: Avg $20 under
+                            <text>@ViewBag.HighestSaveCat : @String.Format("{0:C}", ViewBag.HighestSaveAmt)</text>
                         </span>
                     </div>
                 </div>
